tests/negative/gold/abstractF_test.gold
tests/negative/abstractF_test.toit:4:11: error: Expected name of declaration
  abstract
          ^
Compilation failed.
